feat: improve textbook publication workflow
